Implemented a sample to use an external ActiveMQ hosted in Docker

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 #Embedded Server Configuration for ActiveMQ
+spring.artemis.host=127.0.0.1
+spring.artemis.port=61616
+spring.artemis.user=artemis
+spring.artemis.password=simetraehcapa
